--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,9 @@ include(VersionGen)
 # ==== Options ====
 option(CMAKE_POSITION_INDEPENDENT_CODE "Build position independent code." ON)
 option(BUILD_SHARED_LIBS "Build shared libraries." OFF)
-option(BUILD_PCAP "Build pcap utils." ON)
+option(BUILD_PCAP "Build pcap utils." OFF)
 option(BUILD_OSF "Build Ouster OSF library." OFF)
-option(BUILD_VIZ "Build Ouster visualizer." ON)
+option(BUILD_VIZ "Build Ouster visualizer." OFF)
 option(BUILD_TESTING "Build tests" OFF)
 option(BUILD_EXAMPLES "Build C++ examples" OFF)
 option(OUSTER_USE_EIGEN_MAX_ALIGN_BYTES_32 "Eigen max aligned bytes." ON)
